# LyricDock

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  开发计划.md  窗口状态.json  调试面板.json  配置.toml
lyrics-cache/: 9d214a4c4b0e-千千万万.json  9d214a4c4b0e-千千万万.lrc  cfe8f222df88-连借口都没有.json  cfe8f222df88-连借口都没有.lrc
scripts/: fetch-current-song-lyrics.js
src/: main.rs  mpris.rs  settings.rs
src/lyrics/: mod.rs  parser.rs  source.rs
ui/: lyrics-overlay.slint
