[package]
name = "lyricdock"
version = "0.1.0"
edition = "2024"

[dependencies]
layer-shika = "0.3.1"
layer-shika-adapters = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ksni = { version = "0.3.4", features = ["blocking"] }
slint = { version = "1.15.1", features = ["raw-window-handle-06"] }
raw-window-handle = "0.6"
wayland-client = "0.31.14"
wayland-backend = { version = "0.3.15", features = ["client_system"] }
zbus = "5.14.0"
zvariant = "5.10.0"
unicode-width = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }

[patch.crates-io]
layer-shika-adapters = { path = "vendor/layer-shika-adapters" }
